# quickfix

./: CMakeLists.txt
cmake/: QuickfixPlatformSettings.cmake  QuickfixPrebuildSetup.cmake
spec/: FIX44.bitstamp.xml  Generator.rb  GeneratorCPP.rb  generate_c++.bat  generate_c++.sh
src/: CMakeLists.txt  ut.cpp
src/C++/: CMakeLists.txt
src/quickfix/: CMakeLists.txt  FixFields.h  FixValues.h  MessageCracker.h  SessionFactory.cpp  SocketInitiator.cpp  Utility.cpp
src/quickfix/fix42/: MessageCracker.h
src/quickfix/fix44bitstamp/: Advertisement.h  AllocationInstruction.h  AllocationInstructionAck.h  AllocationReport.h  AllocationReportAck.h  AssignmentReport.h  BidRequest.h  BidResponse.h  BusinessMessageReject.h  CollateralAssignment.h  CollateralInquiry.h  CollateralInquiryAck.h  CollateralReport.h  CollateralRequest.h  CollateralResponse.h  Confirmation.h  ConfirmationAck.h  ConfirmationRequest.h  CrossOrderCancelReplaceRequest.h  CrossOrderCancelRequest.h  DerivativeSecurityList.h  DerivativeSecurityListRequest.h  DontKnowTrade.h  Email.h  ExecutionReport.h  Heartbeat.h  IOI.h  ListCancelRequest.h  ListExecute.h  ListStatus.h  ListStatusRequest.h  ListStrikePrice.h  Logon.h  Logout.h  MarketDataIncrementalRefresh.h  MarketDataRequest.h  MarketDataRequestReject.h  MarketDataSnapshotFullRefresh.h  MassQuote.h  MassQuoteAcknowledgement.h  (+54 more)
src/quickfix/test/: Makefile.am
